feat(account): Manage linked identities
