# apps/backend/src/main/java/com/sashplatonov/habbit/runner/model/AuthIdentityEntity.java
@@ -26,4 +26,7 @@ public class AuthIdentityEntity extends UuidAuditedEntityBase {
 
   @Column
   private String email;
+
+  @Column(name = "displayName")
+  private String displayName;
 }
